tests/neg/main-annotation-mainannotation.scala
import scala.annotation.MainAnnotation

@MainAnnotation def f(i: Int, n: Int) = () // error